# SPANetV2-official

./: README.md  requirements.txt
doc/: setup.md
doc/Model_performance_measure/: README.md  inference_measure.sh  pyproject.toml
doc/Model_performance_measure/models/: __init__.py  metaformer_baselines.py  spanetv2.py  spanetv2_single-scale.py  spanetv2_ver1.py  spanetv2_ver2.py
doc/SPAM_latency_test/: README.md  accurate_component_analysis.py  benchmark.py  inference_measure.sh  (+2 more)
docker/: README.md  make_container.sh  run_container.sh
environment/: linux.yml
image_classification/: FLOPs_count.ipynb  Fourier_analysis.ipynb  README.md  check_train_results.ipynb  demo_cam.py  train.py  val.sh
object_detection/: INSTALL.md  README.md  get_benchmark.sh  inference_demo.sh  pyproject.toml  run_eval.sh  run_train.sh
object_detection/ckpt/: README.md
object_detection/local_configs/SPANetV2/: cascade-mask-rcnn_spanetv2_s18_hybrid_fpn-3x_coco.py  cascade-mask-rcnn_spanetv2_s18_pure_fpn-3x_coco.py  mask-rcnn_spanetv2_s18_hybrid_3x.py  mask-rcnn_spanetv2_s18_pure_3x.py
object_detection/local_configs/_base_/datasets/: coco_instance.py
object_detection/mmdet/engine/optimizers/: __init__.py  layer_decay_optimizer_constructor.py  layer_decay_optimizer_constructor_backup.py
object_detection/mmdet/models/backbones/: __init__.py  spanetv2.py
object_detection/results/: README.md
object_detection/tools/analysis_tools/: get_flops.py
semantic_segmentation/: INSTALL.md  README.md  benchmark.sh  get_flops.sh  inference_demo.sh  pyproject.toml  run_eval.sh  run_train.sh
semantic_segmentation/ckpt/: README.md
semantic_segmentation/local_configs/_base_/datasets/: ade20k.py
semantic_segmentation/local_configs/_base_/models/: fpn_spanetv2.py  upernet_spanetv2.py
semantic_segmentation/local_configs/fpn/SPANetV2/: fpn_spanet_s18_hybrid_ade20k-40k.py  fpn_spanet_s18_pure_ade20k-40k.py  fpn_spanet_s36_hybrid_ade20k-40k.py  fpn_spanet_s36_pure_ade20k-40k.py
semantic_segmentation/local_configs/upernet/SPANetV2/: upernet_spanet_s18_hybrid_ade20k-160k.py  upernet_spanet_s18_pure_ade20k-160k.py  upernet_spanet_s36_hybrid_ade20k-160k.py  upernet_spanet_s36_pure_ade20k-160k.py
semantic_segmentation/mmseg/engine/: __init__.py
semantic_segmentation/mmseg/engine/optimizers/: __init__.py  layer_decay_optimizer_constructor.py
semantic_segmentation/mmseg/models/backbones/: __init__.py  spanetv2.py
semantic_segmentation/results/: README.md
(+19 files in other folders)
